core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Panelist__c/ZVC__Zoom_Webinar_Panelist__c.object-meta.xml
<CustomObject>
    <label>Zoom Webinar Panelist</label>
    <nameField>
        <label>Zoom Panelist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Webinar Panelists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>