core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Panelist__c/fields/ZVC__Panelist_Email__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Panelist_Email__c</fullName>
    <label>Panelist Email</label>
    <type>Email</type>
</CustomField>