core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Panelist__c/fields/ZVC__Panelist_ID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Panelist_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Panelist ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>