core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Panelist__c/fields/ZVC__Zoom_Webinar__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Webinar</label>
    <referenceTo>ZVC__Zoom_Webinar__c</referenceTo>
    <relationshipLabel>Zoom Webinar Panelists</relationshipLabel>
    <relationshipName>Zoom_Webinar_Panelists</relationshipName>
    <type>Lookup</type>
</CustomField>